--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
             <div class="space-y-8 text-lg">
                 <h3 class="text-2xl font-semibold text-white font-serif">1対1のゆったりした雑談</h3>
                 <p class="text-gray-300 leading-8">
-                    ここは、喧騒を離れて語らいたい夜のための場所<br>
-                    ZIZIBAR～翁～は、1対1の対話を大切にしています<br>
-                    ただ静かに、グラスを傾けながら言葉を交わしましょう
+                    ここは、喧騒を離れて語らいたい<br class="md:hidden">夜のための場所<br>
+                    ZIZIBAR～翁～は、<br class="md:hidden">1対1の対話を大切にしています<br>
+                    ただ静かに、グラスを傾けながら<br class="md:hidden">言葉を交わしましょう
                 </p>
             </div>
         </div>
